--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -1,5 +1,4 @@
-
-
+spring:
   # H2 인메모리 DB (테스트용)
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
@@ -32,5 +31,5 @@ gemini:
 # 로깅
 logging:
   level:
-    com.kairos.trading: DEBUG
+    com.kairos.trading: INFO
     org.springframework.web: INFO
